[gd_scene load_steps=4 format=3 uid="uid://duo_attack_option"]

[ext_resource type="Script" path="res://scripts/ui/duo_attack_option.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mana"]
bg_color = Color(0.2, 0.3, 0.6, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.4, 0.5, 0.8, 1)
corner_radius_top_left = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_weapon"]
bg_color = Color(0.6, 0.3, 0.2, 0.8)
border_width_left = 1
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.5, 0.4, 1)
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[node name="DuoAttackOption" type="PanelContainer"]
custom_minimum_size = Vector2(400, 80)
script = ExtResource("1_script")

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ManaPanel" type="PanelContainer" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mana")

[node name="MarginContainer" type="MarginContainer" parent="Button/HBoxContainer/ManaPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Button/HBoxContainer/ManaPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="ManaIcon" type="TextureRect" parent="Button/HBoxContainer/ManaPanel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="ManaLabel" type="Label" parent="Button/HBoxContainer/ManaPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Mana"
horizontal_alignment = 1

[node name="WeaponPanel" type="PanelContainer" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_weapon")

[node name="MarginContainer" type="MarginContainer" parent="Button/HBoxContainer/WeaponPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Button/HBoxContainer/WeaponPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="WeaponIcon" type="TextureRect" parent="Button/HBoxContainer/WeaponPanel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="WeaponLabel" type="Label" parent="Button/HBoxContainer/WeaponPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Arme"
horizontal_alignment = 1
